translate the checkout button

--- a/src/app/pages/customer/my-reservations/my-reservations.component.html
+++ b/src/app/pages/customer/my-reservations/my-reservations.component.html
@@ -67,7 +67,7 @@
               (click)="goToCheckout(reservation.room.id)"
               pButton
             >
-              Checkout
+             {{ "reservation.checkout" | translate }}
             </button>
 
             <!-- رابط الانتقال إلى صفحة تفاصيل الغرفة -->
