Replace Approved Services with Room Services

--- a/src/app/shared/components/room/room-details/room-details.component.html
+++ b/src/app/shared/components/room/room-details/room-details.component.html
@@ -118,7 +118,7 @@
     >
       <h4 class="mb-3">
         <i class="fa-solid fa-concierge-bell me-2"></i>
-        {{ "room.approved-services" | translate }}
+        {{ "room.room-services" | translate }}
       </h4>
 
       <ul class="list-group">
