--- a/src/app/shared/components/room/room-details/room-details.component.html
+++ b/src/app/shared/components/room/room-details/room-details.component.html
@@ -153,25 +153,26 @@
       *ngIf="
         role !== 'Admin' &&
         isRoomBookedByUser &&
-        requestedUserServices.length === 0
+        requestedUserServices.length === 0 &&
+        room?.bookedStatus == 'Booked'
       "
     >
       <p class="text-muted mt-3">
-        {{ "room.no-approved-or-active-services-in-this-room" | translate }}
+        {{ "room.no-services-in-this-room" | translate }}
       </p>
     </div>
 
     <!-- زر الخدمات -->
     <a
       class="book-btn btn-primary"
-      *ngIf="role !== 'Admin' && approvedReservation"
+      *ngIf="role !== 'Admin' && room?.bookedStatus == 'Booked'"
       [routerLink]="['/available-services']"
-      [queryParams]="{ id: approvedReservation?.room?.id }"
+      [queryParams]="{ id: reservation?.room?.id }"
     >
       {{ "reservation.view-services" | translate }}
     </a>
     <!-- زر الحجز للعميل فقط -->
-    @if(room?.bookedStatus == 'Available'){
+    @if(room?.bookedStatus == 'Available' && !reservation){
     <button
       *ngIf="role !== 'Admin'"
       class="book-btn btn-primary"
