--- a/src/app/shared/components/auth/login/login.component.html
+++ b/src/app/shared/components/auth/login/login.component.html
@@ -35,7 +35,7 @@
     </div>
 
     <div class="d-flex justify-content-center m-0">
-      <button class="btn-primary" type="submit">
+      <button class="btn-primary" type="submit" [disabled]="loginForm.invalid">
         {{ "shared.button.login" | translate }}
       </button>
     </div>
