--- a/src/app/shared/components/auth/login/login.component.scss
+++ b/src/app/shared/components/auth/login/login.component.scss
@@ -50,6 +50,11 @@
     button {
       margin-top: 1rem;
     }
+    button[disabled] {
+      background-color: #ccc !important;
+      cursor: not-allowed;
+      opacity: 0.6;
+    }
   }
 
   a {
