--- a/src/app/shared/components/auth/sign-up/sign-up.component.html
+++ b/src/app/shared/components/auth/sign-up/sign-up.component.html
@@ -68,7 +68,7 @@
   </div>
 
   <div class="d-flex justify-content-center">
-    <button class="btn-primary" type="submit">
+    <button class="btn-primary" type="submit" [disabled]="signUpForm.invalid">
       {{ "shared.button.signup" | translate }}
     </button>
   </div>
