--- a/src/app/shared/components/auth/sign-up/sign-up.component.scss
+++ b/src/app/shared/components/auth/sign-up/sign-up.component.scss
@@ -60,3 +60,9 @@ a {
   display: block;
   margin-top: 1rem;
 }
+button[disabled] {
+  background-color: #ccc !important;
+  cursor: not-allowed;
+  opacity: 0.6;
+}
+
