Fix Upload Image

--- a/src/app/shared/components/auth/profile/profile.component.html
+++ b/src/app/shared/components/auth/profile/profile.component.html
@@ -135,8 +135,8 @@
           <img
             class="pfp"
             [src]="
-              user?.pfp
-                ? user?.pfp
+              imageUrl
+                ? imageUrl
                 : '../../../../../assets/images/profile-default-image.png'
             "
           />
