Add Green Color

--- a/src/app/shared/components/room/room-details/room-details.component.html
+++ b/src/app/shared/components/room/room-details/room-details.component.html
@@ -134,7 +134,7 @@
               [ngClass]="{
                 'bg-info': service.requestStatus === 'Pending',
                 'bg-warning': service.requestStatus === 'In Progress',
-                'bg-success': service.requestStatus === 'Completed'
+                'green-bg': service.requestStatus === 'Completed'
               }"
               >{{ service.requestStatus }}</span
             >
