--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -7,6 +7,7 @@ $color-brown: #8a704a;
 $color-dark-brown: #725529;
 
 $color-light-green: #abf7b1;
+$color-green: #5ee769;
 $color-dark-red: #d33030;
 $color-red: #e74c4c;
 $color-light-red: #faa0a0;
