Fix AvailableServicesComponent Issue (Requested Service In One Room Shows In The Other Requested Rooms In The Same Hotel)

--- a/src/app/pages/customer/available-services/available-services.component.html
+++ b/src/app/pages/customer/available-services/available-services.component.html
@@ -126,10 +126,10 @@
 
     <button
       class="btn-primary"
-      [disabled]="isRequestButtonDisabled(service.title)"
+      [disabled]="isRequestButtonDisabled(service)"
       (click)="requestService(service)"
     >
-      {{ getServiceButtonLabel(service.title) }}
+      {{ getServiceButtonLabel(service) }}
     </button>
   </div>
 </div>
