--- a/src/app/pages/admin/room-form/room-form.component.scss
+++ b/src/app/pages/admin/room-form/room-form.component.scss
@@ -38,9 +38,11 @@
   font-size: 16px;
   border: 2px $color-dark-brown solid;
   border-right: none;
+  border-radius: 5px 0px 0px 5px;
 }
 
-input {
+input,
+select {
   margin: 10px 5px;
   padding: 7px;
   font-size: 16px;
@@ -233,4 +235,41 @@ input::-webkit-inner-spin-button {
   color: red;
   padding: 4px;
   text-shadow: 2px 2px 20px black;
+}
+
+.type-input {
+  position: relative;
+  flex: 1 1 auto;
+  width: 1%;
+  min-width: 0;
+}
+
+select {
+  background: url("data:image/svg+xml,<svg height='10px' width='10px' viewBox='0 0 16 16' fill='%23000000' xmlns='http://www.w3.org/2000/svg'><path d='M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z'/></svg>")
+    no-repeat;
+  background-position: calc(100% - 0.75rem) center !important;
+  -moz-appearance: none !important;
+  -webkit-appearance: none !important;
+  appearance: none !important;
+}
+
+select:focus {
+  border: 2px $color-dark-brown solid;
+  outline: none;
+  border-left: none;
+}
+
+.right-input select {
+  background-position: calc(7% - 0.75rem) center !important;
+}
+
+.right-input .type-input {
+  border: 2px $color-dark-brown solid;
+  border-right: none;
+  border-radius: 5px 0 0 5px;
+}
+
+.icon-img {
+  width: 16px;
+  height: 16px;
 }
