--- a/src/app/pages/employee/requests/requests.component.html
+++ b/src/app/pages/employee/requests/requests.component.html
@@ -2,7 +2,7 @@
   @if(pendingServicesRequests.length >0){
   <div class="d-flex">
     <h1 class="m-4">{{ "service.pending-requests" | translate }}</h1>
-      <i class="title-icon fa-solid fa-clock fa-xl align-self-center"></i>
+    <i class="title-icon fa-solid fa-clock fa-xl align-self-center"></i>
   </div>
   <div class="rounded-4 shadow border overflow-hidden mb-5">
     <table class="table table-striped table-bordered mb-0">
@@ -63,7 +63,7 @@
             {{ "user.user-role.customer" | translate }}
             {{ "user.name" | translate }}
           </th>
-          <th>{{ "service.title" | translate }}</th>
+          <th>{{ "shared.form.title" | translate }}</th>
           <th>{{ "room.floor" | translate }}</th>
           <th>{{ "shared.actions" | translate }}</th>
         </tr>
@@ -110,7 +110,7 @@
             {{ "user.user-role.customer" | translate }}
             {{ "user.name" | translate }}
           </th>
-          <th>{{ "service.title" | translate }}</th>
+          <th>{{ "shared.form.title" | translate }}</th>
           <th>{{ "room.floor" | translate }}</th>
         </tr>
       </thead>
@@ -130,9 +130,15 @@
   </div>
   }
 </div>
-@if(!requests.pending && !requests.active && !requests.completed){
-<h3 class="text-center mt-5">
-  {{ "service.there-are-no-requests" | translate }}
-</h3>
+@if(pendingServicesRequests.length <=0 && inProgressServicesRequests.length <=0
+&& completedServicesRequests.length <=0){
+<div
+  class="d-flex justify-content-center align-items-center"
+  style="height: 70vh"
+>
+  <h3 class="text-center">
+    {{ "service.there-are-no-requests" | translate }}
+  </h3>
+</div>
 }
 <p-toast />
