--- a/src/app/shared/components/room/room-details/room-details.component.html
+++ b/src/app/shared/components/room/room-details/room-details.component.html
@@ -176,7 +176,7 @@
     <button
       *ngIf="role !== 'Admin'"
       class="book-btn btn-primary"
-      (click)="bookRoom(room!)"
+      (click)="showDateDialog()"
     >
       {{ "room.book-now" | translate }}
     </button>
@@ -197,7 +197,35 @@
     </button>
   </div>
 </div>
+
 <p-toast></p-toast>
+
+<p-dialog
+  [header]="'shared.form.reservation-duration' | translate"
+  [modal]="true"
+  [(visible)]="dateDialogVisible"
+  [style]="{ width: '25rem' }"
+>
+  <div class="d-flex flex-column justify-content-center w-100">
+    <p-datepicker
+      [(ngModel)]="rangeDates"
+      selectionMode="range"
+      [readonlyInput]="true"
+      [inline]="true"
+      class="align-self-center mb-3" 
+    />
+    <div class="align-self-center">
+      <p-button
+        class="m-1"
+        label="Cancel"
+        severity="secondary"
+        (click)="dateDialogVisible = false"
+      />
+      <p-button class="m-1" label="Save" (click)="bookRoom(room!)" />
+    </div>
+  </div>
+</p-dialog>
+
 <p-confirmdialog #cd>
   <ng-template pTemplate="footer">
     <button
