Disable PastDays and Booked Reservation Dates

--- a/src/app/shared/components/room/room-details/room-details.component.html
+++ b/src/app/shared/components/room/room-details/room-details.component.html
@@ -212,7 +212,9 @@
       selectionMode="range"
       [readonlyInput]="true"
       [inline]="true"
-      class="align-self-center mb-3" 
+      [disabledDates]="disabledDates"
+      class="align-self-center mb-3"
+      [minDate]="todayDate"
     />
     <div class="align-self-center">
       <p-button
