Disable PastDays and Booked Reservation Dates in MyReservations Component Too

--- a/src/app/pages/customer/my-reservations/my-reservations.component.html
+++ b/src/app/pages/customer/my-reservations/my-reservations.component.html
@@ -114,7 +114,9 @@
       selectionMode="range"
       [readonlyInput]="true"
       [inline]="true"
+      [disabledDates]="disabledDates"
       class="align-self-center mb-3"
+      [minDate]="todayDate"
     />
     <div class="align-self-center">
       <p-button
