--- a/src/app/pages/customer/my-reservations/my-reservations.component.html
+++ b/src/app/pages/customer/my-reservations/my-reservations.component.html
@@ -117,6 +117,8 @@
       [disabledDates]="disabledDates"
       class="align-self-center mb-3"
       [minDate]="todayDate"
+      [maxDate]="maxDate"
+      (onSelect)="startDateChanged($event)"
     />
     <div class="align-self-center">
       <p-button
