Add About Us Link And Add It In Header

--- a/src/app/shared/components/layout/header/header.component.html
+++ b/src/app/shared/components/layout/header/header.component.html
@@ -65,6 +65,13 @@
           {{ "header.customer.my-reservations" | translate }}
         </a>
         }
+        <a
+          [routerLink]="'/about-us'"
+          routerLinkActive="active-link"
+          [title]="'header.public.about-us' | translate"
+        >
+          {{ "header.public.about-us" | translate }}
+        </a>
       </div>
 
       <div class="nav-right">
